syntax = "proto3";

enum eUnit {
    player = 0;
    hercules = 1;
    buffer = 2;
}

message oIdentity {
    int32 up = 1;
    int32 down = 2;
}

enum eType {
    __int = 0;
    __float = 1;
    __string = 2;
}

message oValue {
    int64 value_int = 1;
    float value_float = 2;
    string value_string = 3;
}

message oAttribute {
    string name = 1;
    eType type = 2;
    oValue value = 3;
}

message oUnit {
    oIdentity id = 1;
    map<string, oAttribute> attres = 2; // ����Map����
}
